Fixed flicker when adding to array by giving each array element a unique ID

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,7 @@ code {
   display: flex;
   flex-direction: row;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: space-around;
   padding: 4rem;
 }
 header {
@@ -106,7 +106,7 @@ button {
 }
 .images {
   display: flex;
-  width: 100%;
+  width: 50%;
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
@@ -139,6 +139,10 @@ label:first-letter {
   color: rgb(97, 97, 255);
   position: sticky;
   top: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
 }
 @keyframes gotdBorder {
   0% {
